# OpenGeode-IO

./: .clang-tidy  .cproject  .project  CMakeLists.txt  COPYLEFT  README.md  azure-pipelines.yml  upgrade-guide.md
.github/workflows/: CD.yml  CI.yml  CI_schedule.yml  deploy.yml  prepare_pr.yml  schedule.yml  test.yml  test_pr.yml
bindings/python/: CMakeLists.txt  __init__.py  image.py  image_io.py  mesh.py  mesh_io.py  model.py  model_io.py  requirements.txt  setup.py
cmake/: ConfigureAssimp.cmake  ConfigureCImg.cmake  ConfigureJPEG.cmake  ConfigureOpenGeode-IO.cmake  ConfigureOpenGeodeIO.cmake  ConfigurePNG.cmake  ConfigurePugixml.cmake  ConfigureZlib.cmake  OpenGeode-IO.cmake  OpenGeode-IOConfig.cmake.in  OpenGeodeIO.cmake  OpenGeodeIOConfig.cmake.in  SuperBuild.cmake
docs/: how_to_link_with_io.dox  supported_file_formats.dox
include/geode/: CMakeLists.txt
src/geode/: CMakeLists.txt
src/geode/georepresentation/: CMakeLists.txt  common.cpp  msh_input.cpp
src/geode/mesh/: CMakeLists.txt  assimp_input.cpp  common.cpp  dummy.cpp  obj_input.cpp  obj_output.cpp  ply_input.cpp  ply_output.cpp  stl_input.cpp  stl_output.cpp  vtu_output.cpp
src/geode/mesh/detail/: assimp_input.cpp
src/geode/model/: CMakeLists.txt  common.cpp  msh_input.cpp  svg_input.cpp
tests/: CMakeLists.txt
tests/data/: README.md  TopHat.mtl  cea.og_img2d  cone.vtu  cone_append_encoded.vtu  cone_v4.msh  cube_v22.msh  cube_v41vol.msh  curve.smesh  dfn1_ascii.vtp  dfn1_compressed.vtp  dfn2_mesh_append_encoded_compressed.vtp  dfn2_mesh_compressed.vtp  dfn3.vtp  geological_pointset3d.json  hat.vtp  missing_key_word.csv  missing_key_word.json  mss_cut_section.og_sctn  top_granitoid_vertices.json  triangle_internal.msh  triangulated.smesh
tests/georepresentation/: CMakeLists.txt  test-msh.cpp
tests/image/: CMakeLists.txt  test-image.cpp  test-raster-image.cpp
tests/mesh/: CMakeLists.txt  test-csv.cpp  test-dot.cpp  test-dummy.cpp  (+11 more)
(+311 files in other folders)
